--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!--changement de police ici -->
 </head>
 
-<body class="bg-gray-950">
+<body class="bg-gray-950 text-gray-50">
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
