--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!--changement de police ici -->
 </head>
 
-<body class="bg-gray-950 text-gray-50 font-sans">
+<body class="dark:bg-gray-50 dark:text-gray-950 bg-gray-950 text-gray-50 font-sans">
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
